no bracket calculator

--- a/2020-08-26 (Calcutator)/design/image.qrc
+++ b/2020-08-26 (Calcutator)/design/image.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="cal_img">
+    <file>orange_color.png</file>
     <file>gray_color.png</file>
     <file>white_color.png</file>
   </qresource>
